CREATE TABLE "users" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "email" varchar UNIQUE NOT NULL,
  "password" varchar,
  "role" varchar,
  "created_at" timestamp
);

CREATE TABLE "categories" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL,
  "description" varchar
);

CREATE TABLE "products" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "sku" varchar UNIQUE NOT NULL,
  "name" varchar,
  "description" varchar,
  "price" decimal,
  "stock" int,
  "image_url" varchar,
  "active" boolean,
  "category_id" bigint
);

CREATE TABLE "cart" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint UNIQUE,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "cart_item" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "cart_id" bigint,
  "product_id" bigint,
  "quantity" int
);

CREATE TABLE "orders" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint,
  "order_date" timestamp,
  "status" varchar,
  "total" decimal
);

CREATE TABLE "order_items" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "order_id" bigint,
  "product_id" bigint,
  "quantity" int,
  "unit_price" decimal
);

CREATE TABLE "stock_movement" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "product_id" bigint,
  "type" varchar,
  "quantity" int,
  "reason" varchar,
  "reference" varchar,
  "created_at" timestamp,
  "created_by" bigint
);

COMMENT ON COLUMN "users"."password" IS 'hasheada (BCrypt)';

COMMENT ON COLUMN "users"."role" IS 'CLIENTE | ADMIN';

COMMENT ON COLUMN "products"."sku" IS 'clave de negocio';

COMMENT ON COLUMN "products"."stock" IS 'valor cacheado / denormalizado';

COMMENT ON COLUMN "cart"."user_id" IS '1 carrito activo por usuario';

COMMENT ON COLUMN "cart_item"."quantity" IS 'precio VIVO (no se guarda)';

COMMENT ON COLUMN "orders"."status" IS 'PENDIENTE | CONFIRMADA | CANCELADA';

COMMENT ON COLUMN "order_items"."unit_price" IS 'SNAPSHOT: precio congelado';

COMMENT ON COLUMN "stock_movement"."type" IS 'ENTRADA | SALIDA';

COMMENT ON COLUMN "stock_movement"."reason" IS 'compra, venta, ajuste, devolucion';

COMMENT ON COLUMN "stock_movement"."reference" IS 'ej: order_id';

COMMENT ON COLUMN "stock_movement"."created_by" IS 'admin';

ALTER TABLE "products" ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cart" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cart_item" ADD FOREIGN KEY ("cart_id") REFERENCES "cart" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cart_item" ADD FOREIGN KEY ("product_id") REFERENCES "products" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "orders" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "order_items" ADD FOREIGN KEY ("order_id") REFERENCES "orders" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "order_items" ADD FOREIGN KEY ("product_id") REFERENCES "products" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "stock_movement" ADD FOREIGN KEY ("product_id") REFERENCES "products" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "stock_movement" ADD FOREIGN KEY ("created_by") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;
